--- a/env.yaml
+++ b/env.yaml
@@ -1,219 +1,196 @@
-name: arboseer
+name: env
 channels:
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - abseil-cpp=20211102.0=hd4dd3e8_0
-  - arrow-cpp=11.0.0=h374c478_2
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - aws-c-common=0.6.8=h5eee18b_1
-  - aws-c-event-stream=0.1.6=h6a678d5_6
-  - aws-checksums=0.1.11=h5eee18b_2
-  - aws-sdk-cpp=1.8.185=h721c034_1
+  - abseil-cpp=20211102.0=hd77b12b_0
+  - arrow-cpp=14.0.2=ha81ea56_1
+  - aws-c-auth=0.6.19=h2bbff1b_0
+  - aws-c-cal=0.5.20=h2bbff1b_0
+  - aws-c-common=0.8.5=h2bbff1b_0
+  - aws-c-compression=0.2.16=h2bbff1b_0
+  - aws-c-event-stream=0.2.15=hd77b12b_0
+  - aws-c-http=0.6.25=h2bbff1b_0
+  - aws-c-io=0.13.10=h2bbff1b_0
+  - aws-c-mqtt=0.7.13=h2bbff1b_0
+  - aws-c-s3=0.1.51=h2bbff1b_0
+  - aws-c-sdkutils=0.1.6=h2bbff1b_0
+  - aws-checksums=0.1.13=h2bbff1b_0
+  - aws-crt-cpp=0.18.16=hd77b12b_0
+  - aws-sdk-cpp=1.10.55=hd77b12b_0
   - blas=1.0=mkl
-  - blosc=1.21.3=h6a678d5_0
-  - boost-cpp=1.82.0=hdb19cb5_2
-  - boto3=1.29.1=py311h06a4308_0
-  - botocore=1.32.1=py311h06a4308_0
-  - bottleneck=1.3.5=py311hbed6279_0
-  - brotli=1.0.9=h5eee18b_7
-  - brotli-bin=1.0.9=h5eee18b_7
-  - brotli-python=1.0.9=py311h6a678d5_7
-  - bzip2=1.0.8=h7b6447c_0
-  - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2023.12.12=h06a4308_0
-  - cairo=1.16.0=hb05425b_5
-  - cartopy=0.22.0=py311ha02d727_0
-  - certifi=2023.11.17=py311h06a4308_0
-  - cfitsio=3.470=h5893167_7
-  - cftime=1.6.2=py311hbed6279_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - comm=0.1.2=py311h06a4308_0
-  - contourpy=1.2.0=py311hdb19cb5_0
-  - cryptography=41.0.7=py311hdda0065_0
+  - bleach=4.1.0=pyhd3eb1b0_0
+  - blosc=1.21.3=h6c2663c_0
+  - boost-cpp=1.82.0=h59b6b97_2
+  - branca=0.6.0=py311haa95532_0
+  - brotli=1.0.9=h2bbff1b_7
+  - brotli-bin=1.0.9=h2bbff1b_7
+  - brotli-python=1.0.9=py311hd77b12b_8
+  - bzip2=1.0.8=h2bbff1b_5
+  - c-ares=1.19.1=h2bbff1b_0
+  - ca-certificates=2024.3.11=haa95532_0
+  - cairo=1.16.0=haedb8bc_5
+  - cartopy=0.22.0=py311h786e728_0
+  - certifi=2024.2.2=py311haa95532_0
+  - cfitsio=3.470=h2bbff1b_7
+  - cftime=1.6.2=py311h5bb9823_0
+  - contourpy=1.2.0=py311h59b6b97_0
   - cycler=0.11.0=pyhd3eb1b0_0
-  - cyrus-sasl=2.1.28=h52b45da_1
-  - dbus=1.13.18=hb2f20db_0
-  - debugpy=1.6.7=py311h6a678d5_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.5.0=h6a678d5_0
-  - fontconfig=2.14.1=h4c34cd2_2
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.12.1=h4a9f257_0
-  - freexl=2.0.0=hf309648_0
-  - gdal=3.6.2=py311ha0db937_4
-  - geos=3.8.0=he6710b0_0
-  - geotiff=1.7.0=h2a26cda_3
-  - gflags=2.2.2=he6710b0_0
-  - giflib=5.2.1=h5eee18b_3
-  - glib=2.69.1=he621ea3_2
-  - glog=0.5.0=h2531618_0
-  - grpc-cpp=1.48.2=he1ff14a_1
-  - gst-plugins-base=1.14.1=h6a678d5_1
-  - gstreamer=1.14.1=h5eee18b_1
-  - hdf4=4.2.13=h3ca952b_2
-  - hdf5=1.12.1=h2b7332f_3
-  - icu=73.1=h6a678d5_0
-  - idna=3.4=py311h06a4308_0
-  - intel-openmp=2023.1.0=hdb19cb5_46306
-  - ipykernel=6.28.0=py311h06a4308_0
-  - ipython=8.20.0=py311h06a4308_0
-  - jedi=0.18.1=py311h06a4308_1
-  - jmespath=1.0.1=py311h06a4308_0
-  - jpeg=9e=h5eee18b_1
-  - json-c=0.16=h5eee18b_0
-  - jupyter_client=8.6.0=py311h06a4308_0
-  - jupyter_core=5.5.0=py311h06a4308_0
-  - kealib=1.5.0=hd940352_1
-  - kiwisolver=1.4.4=py311h6a678d5_0
-  - krb5=1.20.1=h143b758_1
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libboost=1.82.0=h109eef0_2
-  - libbrotlicommon=1.0.9=h5eee18b_7
-  - libbrotlidec=1.0.9=h5eee18b_7
-  - libbrotlienc=1.0.9=h5eee18b_7
-  - libclang=14.0.6=default_hc6dbbc7_1
-  - libclang13=14.0.6=default_he11475f_1
-  - libcups=2.4.2=h2d74bed_1
-  - libcurl=8.5.0=h251f7ec_0
-  - libdeflate=1.17=h5eee18b_1
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libevent=2.1.12=hdbd6064_1
-  - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgdal=3.6.2=heb138ec_4
-  - libgfortran-ng=11.2.0=h00389a5_1
-  - libgfortran5=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libiconv=1.16=h7f8727e_2
-  - libkml=1.3.0=h096b73e_7
-  - libllvm14=14.0.6=hdb19cb5_3
-  - libnetcdf=4.8.1=h14805e7_4
-  - libnghttp2=1.57.0=h2d74bed_0
-  - libpng=1.6.39=h5eee18b_0
-  - libpq=12.17=hdbd6064_0
-  - libprotobuf=3.20.3=he621ea3_0
-  - libsodium=1.0.18=h7b6447c_0
-  - libspatialite=5.1.0=h01e95a1_0
-  - libssh2=1.10.0=hdbd6064_2
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libthrift=0.15.0=h1795dd8_2
-  - libtiff=4.5.1=h6a678d5_0
-  - libuuid=1.41.5=h5eee18b_0
-  - libwebp=1.3.2=h11a3e52_0
-  - libwebp-base=1.3.2=h5eee18b_0
-  - libxcb=1.15=h7f8727e_0
-  - libxkbcommon=1.0.1=h5eee18b_1
-  - libxml2=2.10.4=hf1b16e4_1
-  - libzip=1.8.0=h6ac8c49_1
-  - lz4-c=1.9.4=h6a678d5_0
-  - matplotlib=3.8.0=py311h06a4308_0
-  - matplotlib-base=3.8.0=py311ha02d727_0
-  - matplotlib-inline=0.1.6=py311h06a4308_0
-  - minizip=4.0.3=hf59b114_0
-  - mkl=2023.1.0=h213fc3f_46344
-  - mkl-service=2.4.0=py311h5eee18b_1
-  - mkl_fft=1.3.8=py311h5eee18b_0
-  - mkl_random=1.2.4=py311hdb19cb5_0
-  - munkres=1.1.4=py_0
-  - mysql=5.7.24=h721c034_2
-  - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.5.6=py311h06a4308_0
-  - netcdf4=1.6.2=py311h0e679e6_0
-  - nspr=4.35=h6a678d5_0
-  - nss=3.89.1=h6a678d5_0
-  - numexpr=2.8.7=py311h65dcdc2_0
-  - openjpeg=2.4.0=h3ad879b_0
-  - openssl=3.0.13=h7f8727e_0
-  - orc=1.7.4=hb3bc3d3_1
-  - packaging=23.1=py311h06a4308_0
-  - pandas=2.1.4=py311ha02d727_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pcre=8.45=h295c915_0
-  - pcre2=10.42=hebb0a14_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pillow=10.0.1=py311ha6cbd5a_0
-  - pip=23.3.1=py311h06a4308_0
-  - pixman=0.40.0=h7f8727e_1
-  - platformdirs=3.10.0=py311h06a4308_0
-  - ply=3.11=py311h06a4308_0
-  - poppler=22.12.0=h9614445_3
-  - poppler-data=0.4.11=h06a4308_1
-  - proj=9.3.1=he5811b7_0
-  - prompt-toolkit=3.0.43=py311h06a4308_0
-  - prompt_toolkit=3.0.43=hd3eb1b0_0
-  - psutil=5.9.0=py311h5eee18b_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pyarrow=11.0.0=py311hd8e8d9b_1
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.15.1=py311h06a4308_1
-  - pyopenssl=23.2.0=py311h06a4308_0
-  - pyparsing=3.0.9=py311h06a4308_0
-  - pyproj=3.6.1=py311h76fdc58_0
-  - pyqt=5.15.10=py311h6a678d5_0
-  - pyqt5-sip=12.13.0=py311h5eee18b_0
-  - pyshp=2.3.1=py311h06a4308_0
-  - pysocks=1.7.1=py311h06a4308_0
-  - python=3.11.7=h955ad1f_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-tzdata=2023.3=pyhd3eb1b0_0
-  - pytz=2023.3.post1=py311h06a4308_0
-  - pyzmq=25.1.2=py311h6a678d5_0
-  - qhull=2020.2=hdb19cb5_2
-  - qt-main=5.15.2=h53bd1ea_10
-  - re2=2022.04.01=h295c915_0
-  - readline=8.2=h5eee18b_0
-  - requests=2.31.0=py311h06a4308_0
-  - s3transfer=0.7.0=py311h06a4308_0
-  - setuptools=68.2.2=py311h06a4308_0
-  - shapely=2.0.1=py311h24a2a10_0
-  - sip=6.7.12=py311h6a678d5_0
+  - expat=2.5.0=hd77b12b_0
+  - folium=0.14.0=py311haa95532_0
+  - fontconfig=2.14.1=h9c4af85_2
+  - fonttools=4.51.0=py311h2bbff1b_0
+  - freetype=2.12.1=ha860e81_0
+  - freexl=2.0.0=hd7a5696_0
+  - gdal=3.6.2=py311h4e7b5b2_4
+  - geos=3.8.0=h33f27b4_0
+  - geotiff=1.7.0=h4545760_3
+  - gflags=2.2.2=hd77b12b_1
+  - glib=2.78.4=hd77b12b_0
+  - glib-tools=2.78.4=hd77b12b_0
+  - glog=0.5.0=hd77b12b_1
+  - grpc-cpp=1.48.2=hfe90ff0_1
+  - hdf4=4.2.13=h712560f_2
+  - hdf5=1.12.1=h51c971a_3
+  - icc_rt=2022.1.0=h6049295_2
+  - icu=73.1=h6c2663c_0
+  - idna=3.7=py311haa95532_0
+  - intel-openmp=2023.1.0=h59b6b97_46320
+  - jinja2=3.1.3=py311haa95532_0
+  - jpeg=9e=h2bbff1b_1
+  - kealib=1.5.0=hde4a422_1
+  - kiwisolver=1.4.4=py311hd77b12b_0
+  - krb5=1.20.1=h5b6d351_0
+  - lcms2=2.12=h83e58a3_0
+  - lerc=3.0=hd77b12b_0
+  - libboost=1.82.0=h3399ecb_2
+  - libbrotlicommon=1.0.9=h2bbff1b_7
+  - libbrotlidec=1.0.9=h2bbff1b_7
+  - libbrotlienc=1.0.9=h2bbff1b_7
+  - libclang13=14.0.6=default_h8e68704_1
+  - libcurl=8.5.0=h86230a5_0
+  - libdeflate=1.17=h2bbff1b_1
+  - libevent=2.1.12=h56d1f94_1
+  - libffi=3.4.4=hd77b12b_0
+  - libgdal=3.6.2=h9a21643_4
+  - libglib=2.78.4=ha17d25a_0
+  - libiconv=1.16=h2bbff1b_2
+  - libkml=1.3.0=h63940dd_7
+  - libnetcdf=4.8.1=h6685c40_4
+  - libpng=1.6.39=h8cc25b3_0
+  - libpq=12.17=h906ac69_0
+  - libprotobuf=3.20.3=h23ce68f_0
+  - libspatialite=5.1.0=hbdd3232_0
+  - libssh2=1.10.0=he2ea4bf_2
+  - libthrift=0.15.0=h4364b78_2
+  - libtiff=4.5.1=hd77b12b_0
+  - libwebp-base=1.3.2=h2bbff1b_0
+  - libxml2=2.10.4=h0ad7f3c_1
+  - libzip=1.8.0=h289538f_1
+  - lz4-c=1.9.4=h2bbff1b_0
+  - markupsafe=2.1.3=py311h2bbff1b_0
+  - matplotlib=3.8.4=py311haa95532_0
+  - matplotlib-base=3.8.4=py311hf62ec03_0
+  - minizip=4.0.3=hb68bac4_0
+  - mkl=2023.1.0=h6b88ed4_46358
+  - mkl-service=2.4.0=py311h2bbff1b_1
+  - mkl_fft=1.3.8=py311h2bbff1b_0
+  - mkl_random=1.2.4=py311h59b6b97_0
+  - netcdf4=1.6.2=py311hec71f40_0
+  - numpy=1.26.4=py311hdab7c0b_0
+  - numpy-base=1.26.4=py311hd01c5d8_0
+  - openjpeg=2.4.0=h4fc8c34_0
+  - openssl=3.0.13=h2bbff1b_1
+  - orc=1.7.4=h623e30f_1
+  - packaging=23.2=py311haa95532_0
+  - pcre2=10.42=h0ff8eda_0
+  - pillow=10.2.0=py311h2bbff1b_0
+  - pip=23.3.1=py311haa95532_0
+  - pixman=0.40.0=h2bbff1b_1
+  - ply=3.11=py311haa95532_0
+  - poppler=22.12.0=h0bf3bde_3
+  - poppler-data=0.4.11=haa95532_1
+  - proj=9.3.1=ha107b6e_0
+  - pyarrow=14.0.2=py311h847bd2a_0
+  - pybind11-abi=5=hd3eb1b0_0
+  - pyparsing=3.0.9=py311haa95532_0
+  - pyproj=3.6.1=py311ha997c60_0
+  - pyqt=5.15.10=py311hd77b12b_0
+  - pyqt5-sip=12.13.0=py311h2bbff1b_0
+  - pyshp=2.3.1=py311haa95532_0
+  - pysocks=1.7.1=py311haa95532_0
+  - python=3.11.8=he1021f5_0
+  - pyyaml=6.0.1=py311h2bbff1b_0
+  - qhull=2020.2=h59b6b97_2
+  - qt-main=5.15.2=h19c9488_10
+  - re2=2022.04.01=hd77b12b_0
+  - requests=2.31.0=py311haa95532_1
+  - responses=0.25.0=py311haa95532_0
+  - scipy=1.13.0=py311h9f229c6_0
+  - setuptools=68.2.2=py311haa95532_0
+  - shapely=2.0.1=py311h672afca_0
+  - sip=6.7.12=py311hd77b12b_0
   - six=1.16.0=pyhd3eb1b0_1
-  - snappy=1.1.10=h6a678d5_1
-  - sqlite=3.41.2=h5eee18b_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tbb=2021.8.0=hdb19cb5_0
-  - tiledb=2.3.3=h77177df_3
-  - tk=8.6.12=h1ccaba5_0
-  - tornado=6.3.3=py311h5eee18b_0
-  - traitlets=5.7.1=py311h06a4308_0
-  - tzdata=2023d=h04d1e81_0
-  - uriparser=0.9.7=h5eee18b_0
-  - urllib3=1.26.18=py311h06a4308_0
-  - utf8proc=2.6.1=h27cfd23_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - wheel=0.41.2=py311h06a4308_0
-  - xerces-c=3.2.4=h6a678d5_1
-  - xz=5.4.5=h5eee18b_0
-  - zeromq=4.3.5=h6a678d5_0
-  - zlib=1.2.13=h5eee18b_0
-  - zstd=1.5.5=hc292b87_0
+  - snappy=1.1.10=h6c2663c_1
+  - sqlite=3.41.2=h2bbff1b_0
+  - tbb=2021.8.0=h59b6b97_0
+  - tiledb=2.3.3=hd8964de_3
+  - tk=8.6.12=h2bbff1b_0
+  - tornado=6.3.3=py311h2bbff1b_0
+  - unicodedata2=15.1.0=py311h2bbff1b_0
+  - uriparser=0.9.7=h2bbff1b_0
+  - utf8proc=2.6.1=h2bbff1b_1
+  - vc=14.2=h21ff451_1
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - webencodings=0.5.1=py311haa95532_1
+  - wheel=0.41.2=py311haa95532_0
+  - win_inet_pton=1.1.0=py311haa95532_0
+  - xerces-c=3.2.4=hd77b12b_1
+  - xz=5.4.6=h8cc25b3_0
+  - yaml=0.2.5=he774522_0
+  - zlib=1.2.13=h8cc25b3_0
+  - zstd=1.5.5=hd43e919_0
   - pip:
-      - aioftp==0.21.4
-      - bigtree==0.12.5
-      - cffi==1.15.1
-      - cramjam==2.8.1
-      - dateparser==1.2.0
-      - dbfread==2.0.7
-      - elasticsearch==7.16.2
-      - fastparquet==2023.10.1
-      - fsspec==2023.12.2
-      - humanize==4.9.0
-      - loguru==0.6.0
-      - numpy==1.26.2
-      - pyreaddbc==1.2.0
-      - pysus==0.13.1
-      - pyyaml==6.0.1
-      - regex==2023.12.25
-      - tqdm==4.64.0
-      - typing-extensions==4.9.0
-      - tzlocal==5.2
-      - unidecode==1.3.8
-      - urwid==2.5.1
-      - wget==3.2
+      - absl-py==2.1.0
+      - astunparse==1.6.3
+      - boto3==1.34.87
+      - botocore==1.34.87
+      - chardet==5.2.0
+      - charset-normalizer==3.3.2
+      - colorama==0.4.6
+      - flatbuffers==24.3.25
+      - gast==0.5.4
+      - google-pasta==0.2.0
+      - grpcio==1.64.0
+      - h5py==3.11.0
+      - jmespath==1.0.1
+      - joblib==1.4.2
+      - keras==3.3.3
+      - libclang==18.1.1
+      - markdown==3.6
+      - markdown-it-py==3.0.0
+      - mdurl==0.1.2
+      - ml-dtypes==0.3.2
+      - namex==0.0.8
+      - opt-einsum==3.3.0
+      - optree==0.11.0
+      - pandas==2.2.2
+      - protobuf==4.25.3
+      - pygments==2.18.0
+      - python-dateutil==2.9.0.post0
+      - pytz==2024.1
+      - rich==13.7.1
+      - s3transfer==0.10.1
+      - scikit-learn==1.5.0
+      - tensorboard==2.16.2
+      - tensorboard-data-server==0.7.2
+      - tensorflow==2.16.1
+      - tensorflow-intel==2.16.1
+      - tensorflow-io-gcs-filesystem==0.31.0
+      - termcolor==2.4.0
+      - threadpoolctl==3.5.0
+      - tqdm==4.66.4
+      - typing-extensions==4.11.0
+      - tzdata==2024.1
+      - urllib3==2.2.1
+      - werkzeug==3.0.3
+      - wrapt==1.16.0
