--- a/arboseer.yml
+++ b/arboseer.yml
@@ -4,53 +4,81 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - abseil-cpp=20211102.0=hd4dd3e8_0
+  - arrow-cpp=14.0.2=h374c478_1
+  - attrs=23.1.0=py311h06a4308_0
+  - aws-c-auth=0.6.19=h5eee18b_0
+  - aws-c-cal=0.5.20=hdbd6064_0
+  - aws-c-common=0.8.5=h5eee18b_0
+  - aws-c-compression=0.2.16=h5eee18b_0
+  - aws-c-event-stream=0.2.15=h6a678d5_0
+  - aws-c-http=0.6.25=h5eee18b_0
+  - aws-c-io=0.13.10=h5eee18b_0
+  - aws-c-mqtt=0.7.13=h5eee18b_0
+  - aws-c-s3=0.1.51=hdbd6064_0
+  - aws-c-sdkutils=0.1.6=h5eee18b_0
+  - aws-checksums=0.1.13=h5eee18b_0
+  - aws-crt-cpp=0.18.16=h6a678d5_0
+  - aws-sdk-cpp=1.10.55=h721c034_0
   - blas=1.0=mkl
   - blosc=1.21.3=h6a678d5_0
   - boost-cpp=1.82.0=hdb19cb5_2
-  - boto3=1.34.82=py38h06a4308_0
-  - botocore=1.34.82=py38h06a4308_0
-  - bottleneck=1.3.7=py38ha9d4c09_0
+  - boto3=1.34.82=py311h06a4308_0
+  - botocore=1.34.82=py311h06a4308_0
+  - bottleneck=1.3.7=py311hf4808d0_0
+  - branca=0.6.0=py311h06a4308_0
   - brotli=1.0.9=h5eee18b_8
   - brotli-bin=1.0.9=h5eee18b_8
-  - brotli-python=1.0.9=py38h6a678d5_8
+  - brotli-python=1.0.9=py311h6a678d5_8
   - bzip2=1.0.8=h5eee18b_6
   - c-ares=1.19.1=h5eee18b_0
   - ca-certificates=2024.3.11=h06a4308_0
   - cairo=1.16.0=hb05425b_5
-  - certifi=2024.6.2=py38h06a4308_0
-  - cffi=1.16.0=py38h5eee18b_1
+  - certifi=2024.6.2=py311h06a4308_0
   - cfitsio=3.470=h5893167_7
-  - cftime=1.6.2=py38h7deecbd_0
+  - cftime=1.6.2=py311hbed6279_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - contourpy=1.0.5=py38hdb19cb5_0
-  - cryptography=42.0.5=py38hdda0065_1
+  - click=8.1.7=py311h06a4308_0
+  - click-plugins=1.1.1=pyhd3eb1b0_0
+  - cligj=0.7.2=pyhd3eb1b0_0
+  - contourpy=1.2.0=py311hdb19cb5_0
+  - cryptography=42.0.5=py311hdda0065_1
   - cycler=0.11.0=pyhd3eb1b0_0
   - cyrus-sasl=2.1.28=h52b45da_1
   - dbus=1.13.18=hb2f20db_0
   - expat=2.6.2=h6a678d5_0
+  - fiona=1.9.5=py311ha02d727_0
+  - folium=0.14.0=py311h06a4308_0
   - fontconfig=2.14.1=h4c34cd2_2
-  - fonttools=4.51.0=py38h5eee18b_0
+  - fonttools=4.51.0=py311h5eee18b_0
   - freetype=2.12.1=h4a9f257_0
   - freexl=2.0.0=hf309648_0
-  - gdal=3.6.2=py38h0daa840_4
+  - gdal=3.6.2=py311ha0db937_4
+  - geopandas=0.14.2=py311h06a4308_0
+  - geopandas-base=0.14.2=py311h06a4308_0
   - geos=3.8.0=he6710b0_0
   - geotiff=1.7.0=h2a26cda_3
+  - gflags=2.2.2=h6a678d5_1
   - giflib=5.2.1=h5eee18b_3
   - glib=2.78.4=h6a678d5_0
   - glib-tools=2.78.4=h6a678d5_0
+  - glog=0.5.0=h6a678d5_1
+  - grpc-cpp=1.48.2=he1ff14a_1
   - gst-plugins-base=1.14.1=h6a678d5_1
   - gstreamer=1.14.1=h5eee18b_1
   - hdf4=4.2.13=h3ca952b_2
   - hdf5=1.12.1=h2b7332f_3
   - icu=73.1=h6a678d5_0
-  - idna=3.7=py38h06a4308_0
-  - importlib_resources=6.1.1=py38h06a4308_1
+  - idna=3.7=py311h06a4308_0
+  - importlib_resources=6.1.1=py311h06a4308_1
   - intel-openmp=2023.1.0=hdb19cb5_46306
-  - jmespath=1.0.1=py38h06a4308_0
+  - jinja2=3.1.4=py311h06a4308_0
+  - jmespath=1.0.1=py311h06a4308_0
+  - joblib=1.4.2=py311h06a4308_0
   - jpeg=9e=h5eee18b_1
   - json-c=0.16=h5eee18b_0
   - kealib=1.5.0=hd940352_1
-  - kiwisolver=1.4.4=py38h6a678d5_0
+  - kiwisolver=1.4.4=py311h6a678d5_0
   - krb5=1.20.1=h143b758_1
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
@@ -66,6 +94,7 @@ dependencies:
   - libdeflate=1.17=h5eee18b_1
   - libedit=3.1.20230828=h5eee18b_0
   - libev=4.33=h7f8727e_1
+  - libevent=2.1.12=hdbd6064_1
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgdal=3.6.2=heb138ec_4
@@ -80,9 +109,12 @@ dependencies:
   - libnghttp2=1.57.0=h2d74bed_0
   - libpng=1.6.39=h5eee18b_0
   - libpq=12.17=hdbd6064_0
+  - libprotobuf=3.20.3=he621ea3_0
+  - libspatialindex=1.9.3=h2531618_0
   - libspatialite=5.1.0=h01e95a1_0
   - libssh2=1.11.0=h251f7ec_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libthrift=0.15.0=h1795dd8_2
   - libtiff=4.5.1=h6a678d5_0
   - libuuid=1.41.5=h5eee18b_0
   - libwebp-base=1.3.2=h5eee18b_0
@@ -91,64 +123,109 @@ dependencies:
   - libxml2=2.10.4=hfdd30dd_2
   - libzip=1.8.0=h6ac8c49_1
   - lz4-c=1.9.4=h6a678d5_1
-  - matplotlib=3.7.2=py38h06a4308_0
-  - matplotlib-base=3.7.2=py38h1128e8f_0
+  - mapclassify=2.5.0=py311h06a4308_0
+  - markupsafe=2.1.3=py311h5eee18b_0
+  - matplotlib=3.8.4=py311h06a4308_0
+  - matplotlib-base=3.8.4=py311ha02d727_0
   - minizip=4.0.3=hf59b114_0
   - mkl=2023.1.0=h213fc3f_46344
-  - mkl-service=2.4.0=py38h5eee18b_1
-  - mkl_fft=1.3.8=py38h5eee18b_0
-  - mkl_random=1.2.4=py38hdb19cb5_0
+  - mkl-service=2.4.0=py311h5eee18b_1
+  - mkl_fft=1.3.8=py311h5eee18b_0
+  - mkl_random=1.2.4=py311hdb19cb5_0
   - mysql=5.7.24=h721c034_2
   - ncurses=6.4=h6a678d5_0
-  - netcdf4=1.6.2=py38h89d13dc_0
+  - netcdf4=1.6.2=py311h0e679e6_0
+  - networkx=3.2.1=py311h06a4308_0
   - nspr=4.35=h6a678d5_0
   - nss=3.89.1=h6a678d5_0
-  - numexpr=2.8.4=py38hc78ab66_1
-  - numpy=1.24.3=py38hf6e8229_1
-  - numpy-base=1.24.3=py38h060ed82_1
+  - numexpr=2.8.7=py311h65dcdc2_0
   - openjpeg=2.4.0=h3ad879b_0
-  - openssl=3.0.13=h7f8727e_2
-  - packaging=23.2=py38h06a4308_0
-  - pandas=2.0.3=py38h1128e8f_0
+  - openssl=3.0.14=h5eee18b_0
+  - orc=1.7.4=hb3bc3d3_1
+  - packaging=23.2=py311h06a4308_0
+  - pandas=2.2.2=py311ha02d727_0
   - pcre2=10.42=hebb0a14_1
-  - pillow=10.3.0=py38h5eee18b_0
-  - pip=24.0=py38h06a4308_0
+  - pillow=10.3.0=py311h5eee18b_0
+  - pip=24.0=py311h06a4308_0
   - pixman=0.40.0=h7f8727e_1
-  - ply=3.11=py38_0
+  - platformdirs=3.10.0=py311h06a4308_0
+  - ply=3.11=py311h06a4308_0
+  - pooch=1.7.0=py311h06a4308_0
   - poppler=22.12.0=h9614445_3
   - poppler-data=0.4.11=h06a4308_1
   - proj=9.3.1=he5811b7_0
+  - psutil=5.9.0=py311h5eee18b_0
+  - pyarrow=14.0.2=py311hb6e97c4_0
+  - pybind11-abi=4=hd3eb1b0_1
   - pycparser=2.21=pyhd3eb1b0_0
-  - pyopenssl=24.0.0=py38h06a4308_0
-  - pyparsing=3.0.9=py38h06a4308_0
-  - pyqt=5.15.10=py38h6a678d5_0
-  - pyqt5-sip=12.13.0=py38h5eee18b_0
-  - pysocks=1.7.1=py38h06a4308_0
-  - python=3.8.19=h955ad1f_0
-  - python-dateutil=2.9.0post0=py38h06a4308_2
+  - pyopenssl=24.0.0=py311h06a4308_0
+  - pyparsing=3.0.9=py311h06a4308_0
+  - pyproj=3.6.1=py311h76fdc58_0
+  - pyqt=5.15.10=py311h6a678d5_0
+  - pyqt5-sip=12.13.0=py311h5eee18b_0
+  - pysocks=1.7.1=py311h06a4308_0
+  - python=3.11.9=h955ad1f_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
-  - pytz=2024.1=py38h06a4308_0
+  - pytz=2024.1=py311h06a4308_0
   - qhull=2020.2=hdb19cb5_2
   - qt-main=5.15.2=h53bd1ea_10
+  - re2=2022.04.01=h295c915_0
   - readline=8.2=h5eee18b_0
-  - requests=2.32.2=py38h06a4308_0
-  - s3transfer=0.10.1=py38h06a4308_0
-  - setuptools=69.5.1=py38h06a4308_0
-  - sip=6.7.12=py38h6a678d5_0
+  - requests=2.32.2=py311h06a4308_0
+  - rtree=1.0.1=py311h06a4308_0
+  - s2n=1.3.27=hdbd6064_0
+  - s3transfer=0.10.1=py311h06a4308_0
+  - scikit-learn=1.4.2=py311ha02d727_1
+  - scipy=1.13.1=py311h08b1b3b_0
+  - seaborn=0.13.2=py311h06a4308_0
+  - setuptools=69.5.1=py311h06a4308_0
+  - shapely=2.0.1=py311h24a2a10_0
+  - sip=6.7.12=py311h6a678d5_0
   - six=1.16.0=pyhd3eb1b0_1
+  - snappy=1.1.10=h6a678d5_1
   - sqlite=3.45.3=h5eee18b_0
   - tbb=2021.8.0=hdb19cb5_0
+  - threadpoolctl=3.5.0=py311h92b7b1e_0
   - tiledb=2.3.3=h77177df_3
   - tk=8.6.14=h39e8969_0
-  - tomli=2.0.1=py38h06a4308_0
-  - tornado=6.3.3=py38h5eee18b_0
-  - unicodedata2=15.1.0=py38h5eee18b_0
+  - tomli=2.0.1=py311h06a4308_0
+  - tornado=6.4.1=py311h5eee18b_0
+  - tzdata=2024a=h04d1e81_0
+  - unicodedata2=15.1.0=py311h5eee18b_0
   - uriparser=0.9.7=h5eee18b_0
-  - urllib3=1.26.18=py38h06a4308_0
-  - wheel=0.43.0=py38h06a4308_0
+  - utf8proc=2.6.1=h5eee18b_1
+  - wheel=0.43.0=py311h06a4308_0
+  - xarray=2023.6.0=py311h06a4308_0
   - xerces-c=3.2.4=h6a678d5_1
+  - xyzservices=2022.9.0=py311h06a4308_1
   - xz=5.4.6=h5eee18b_1
-  - zipp=3.17.0=py38h06a4308_0
+  - zipp=3.17.0=py311h06a4308_0
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.5=hc292b87_2
+  - pip:
+      - aioftp==0.21.4
+      - bigtree==0.12.5
+      - cffi==1.15.1
+      - cramjam==2.8.3
+      - dateparser==1.2.0
+      - dbfread==2.0.7
+      - elasticsearch==7.16.2
+      - fastparquet==2024.5.0
+      - fsspec==2024.6.0
+      - humanize==4.9.0
+      - loguru==0.6.0
+      - numpy==1.26.2
+      - pyreaddbc==1.2.0
+      - pysus==0.14.0
+      - python-dateutil==2.8.2
+      - pyyaml==6.0.1
+      - regex==2024.5.15
+      - tqdm==4.64.0
+      - typing-extensions==4.12.2
+      - tzlocal==5.2
+      - unidecode==1.3.8
+      - urllib3==1.26.19
+      - urwid==2.6.14
+      - wcwidth==0.2.13
+      - wget==3.2
 prefix: /home/rgarcia/anaconda3/envs/arboseer
